--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.0.*"
+        "phpunit/phpunit": "^8"
     },
     "autoload": {
         "psr-4": {
